# testronaut

./: .cursorignore  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NEXT_STEPS.md  PRD-AI-CLI-Testing-2025-03-24.md  README.md  USER-IDEA.md  analyze-command-refactoring-tracker.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  requirements.txt  setup.sh  sitemap.xml  test_components.py
.cursor/rules/: core.mdc  testronaut.mdc
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  main.yml  release.yml  security.yml
api/overview/: index.html
ci/: Dockerfile.workflows  README.md  actions-validator.py  test-docs.sh  test-main.sh  test-security.sh  test-workflows.sh
code/: README.md  pyproject.toml
code/ai_cli_testing/cli/: __init__.py  main.py
code/ai_cli_testing/core/: __init__.py  analyzer.py
code/docker/: Dockerfile
code/docker/templates/: test-container.dockerfile
diagrams/: architecture.md  data-model.md  deployment.md  sequence.md
docs/: index.md
docs/api/: overview.md
docs/guides/: advanced_analysis.md  concepts.md  installation.md  llm_enhanced_analysis.md  quickstart.md
docs/reference/: cli.md  configuration.md
examples/: llm_enhanced_analysis.py  ls_analysis.json  ping_analysis.json  python_analysis.json  simple_llm_analysis.py
features/: Feature_overview.md  Phase_000_project_setup.md  Phase_001_testing_infrastructure.md  Phase_002_ci_cd_pipeline.md  Phase_003_core_architecture.md  Phase_004_cli_analysis_engine.md  Phase_005_test_plan_generator.md  Phase_006_docker_test_execution.md  Phase_007_ai_result_verification.md  Phase_008_model_flexibility.md  Phase_009_reporting_system.md  Phase_010_integration_release.md
guides/advanced_analysis/: index.html
guides/concepts/: index.html
guides/installation/: index.html
guides/llm_enhanced_analysis/: index.html
guides/quickstart/: index.html
memory-bank/: activeContext.md  ci-cd-summary.md  phase003-planning.md  phase003-progress.md  phase004-progress.md  phase005-planning.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md  test-improvements.md  typer-command-structure-issue.md
reference/cli/: index.html
reference/configuration/: index.html
scripts/: download_phi4_model.py
search/: search_index.json
src/: README.md  pyproject.toml  requirements.txt
src/docker/: Dockerfile
src/testronaut/: __init__.py  __main__.py  analyze.py
src/testronaut/analyzer/: README.md
src/testronaut/analyzers/: __init__.py  core.py  help_parser.py  llm_enhanced_analyzer.py  llm_helper.py  standard_analyzer.py
src/testronaut/analyzers/utils/: __init__.py  display.py  preferences.py
src/testronaut/cli/: __init__.py  analyze.py  common.py  main.py
src/testronaut/cli/commands/: __init__.py  analyze.py  analyze_commands.py  config.py  config_llm.py  db.py  execute.py  generate.py  report.py  verify.py
src/testronaut/config/: __init__.py  default_config.yaml  file_io.py  loader.py  models.py  setup.py
src/testronaut/core/: __init__.py  analyzer.py
src/testronaut/core/analyzer/: __init__.py  analyzer.py
src/testronaut/core/generator/: generator.py
src/testronaut/core/models/: __init__.py  cli_tool.py  test_plan.py
src/testronaut/factory/: __init__.py  analyzer.py  executor.py  generator.py  llm.py  verifier.py
src/testronaut/interfaces/: __init__.py  analyzer.py  executor.py  generator.py  llm.py  verifier.py
src/testronaut/llm/: manager.py  utils.py
src/testronaut/llm/providers/: base.py  llama_cpp_provider.py  mock_provider.py
src/testronaut/migrations/: __init__.py  alembic.ini  env.py
src/testronaut/migrations/versions/: initial_schema.py
src/testronaut/models/: __init__.py  base.py  cli_tool.py  test_plan.py
src/testronaut/repositories/: __init__.py  cli_tool.py
src/testronaut/ui/: README.md  __init__.py  browser.py  repository.py
src/testronaut/ui/styles/: browser.tcss
src/testronaut/ui/widgets/: command_tree.py  detail_panel.py  search_input.py  sql_debug_button.py  tools_table.py
src/testronaut/utils/: __init__.py  command.py  docker.py  errors.py  json_encoder.py  logger.py  text_utils.py  version.py
src/testronaut/utils/docker_client/: __init__.py  container_client.py  image_client.py  network_client.py  system_client.py  volume_client.py
src/testronaut/utils/errors/: __init__.py
src/testronaut/utils/llm/: __init__.py  llm_service.py  prompts.py  registry.py  result_processor.py  service.py
src/testronaut/utils/llm/providers/: __init__.py  anthropic.py  mock.py  openai.py
src/testronaut/utils/logging/: __init__.py  context.py  setup.py
testronaut_analysis/: ls_analysis.json  testronaut_analysis.json  tokeo_analysis.json
tests/: conftest.py
tests/functional/: conftest.py  mock_cli.py  test_analyze_workflow.py  test_full_workflow.py
tests/integration/: test_analyzer_generator.py
tests/unit/cli/: test_commands.py  test_main.py
tests/unit/core/: test_analyzer.py  test_generator.py
tests/unit/utils/: test_logger.py  test_version.py
