[build-system]
requires = ["setuptools>=62.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "testronaut"
version = "0.4.0"
description = "AI-assisted testing tool for command-line applications"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ulrich Diedrichsen", email = "uli@moinsen.dev" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "typer>=0.15.2",
    "rich>=13.9.4",
    "pydantic>=2.11.1",
    "sqlmodel>=0.0.24",
    "alembic>=1.15.2",
    "structlog>=25.2.0",
    "pyyaml>=6.0.2",
    "textual>=3.0.0",
    "openai>=1.69.0",
    "anthropic>=0.49.0",
    "questionary>=2.1.0",
    "requests>=2.32.3",
    "types-requests>=2.32.0.20250328",
    "huggingface-hub>=0.29.3",
    # "llama-cpp-python>=0.3.8", # Moved to optional dependencies
    "pydantic-settings>=2.8.1",
]

[project.optional-dependencies]
local-llm = [
    "llama-cpp-python>=0.3.8", # For local model support
]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.2",
    "mypy>=1.15.0",
    "black>=25.1.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.9",
    "mkdocstrings[python]>=0.29.0",
    "mkdocs-autorefs>=1.4.1",
]

all = [
    "openai>=1.68.2",
    "anthropic>=0.49.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.2",
    "mypy>=1.15.0",
    "black>=25.1.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.9",
    "mkdocstrings[python]>=0.29.0",
    "mkdocs-autorefs>=1.4.1",
]

[project.scripts]
testronaut = "testronaut.cli:app"

[tool.ruff]
# Enable flake8-bugbear rules
select = ["E", "F", "B", "I"]
ignore = []
line-length = 100
target-version = "py310"

[tool.ruff.isort]
known-first-party = ["testronaut"]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "functional: marks tests as functional tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
