[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-cli-testing"
version = "0.1.0"
description = "AI-assisted end-to-end CLI testing tool"
authors = [
    {name = "Ulrich Diedrichsen", email = "uli@moinsen.dev"}
]
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.30.0",
    "typer>=0.7.0",
    "rich>=13.7.0",
    "pydantic>=2.6.0",
    "docker>=7.0.0",
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.1.0",
    "openai>=1.20.0",
    "anthropic>=0.18.0",
    "sqlmodel>=0.0.14",
    "alembic>=1.13.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[project.urls]
"Homepage" = "https://www.moinsen.dev"
"Bug Tracker" = "https://github.com/moinsen-dev/ai-cli-testing/issues"

[project.scripts]
ai-cli-test = "ai_cli_testing.cli.main:app"

[tool.setuptools]
packages = ["ai_cli_testing"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["ai_cli_testing"]
omit = ["tests/*", "examples/*"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 88
