[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "testronauting"
version = "0.1.0"
description = "AI-assisted end-to-end CLI testing tool"
authors = [{ name = "Ulrich Diedrichsen", email = "uli@moinsen.dev" }]
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn[standard]>=0.34.0",
    "typer>=0.15.2",
    "rich>=13.9.4",
    "pydantic>=2.10.6",
    "docker>=7.1.0",
    "langchain>=0.3.21",
    "langchain-openai>=0.3.9",
    "langchain-community>=0.3.20",
    "openai>=1.68.2",
    "anthropic>=0.49.0",
    "sqlmodel>=0.0.24",
    "alembic>=1.15.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
]

[project.urls]
"Homepage" = "https://www.moinsen.dev"
"Bug Tracker" = "https://github.com/moinsen-dev/testronauting/issues"

[project.scripts]
testronaut = "testronaut.cli.main:app"

[tool.setuptools]
packages = ["testronaut"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["testronaut"]
omit = ["tests/*", "examples/*"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 88
